Fix grid alignment for event items with borders

--- a/src/app/components/activity/feed/event-item/event-item.styl
+++ b/src/app/components/activity/feed/event-item/event-item.styl
@@ -17,9 +17,9 @@
 	@media $media-sm-up
 		rounded-corners()
 		theme-prop('border-color', 'bg-offset')
-		padding: $-item-padding
 		border-width: 2px
 		border-style: solid
+		padding: $-item-padding - @border-width
 		margin-left: 0
 		margin-right: 0
 
